--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -19,7 +19,7 @@
 
     @include onMobile {
       margin-bottom: 45px;
-      padding-top: 0;
+      padding-top: 43px;
       display: block;
       position: relative;
     }
@@ -31,7 +31,7 @@
     @include onMobile {
       margin-bottom: 43px;
       position: absolute;
-      top: 190px;
+      top: 230px;
       left: 125px;
     }
 
