--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin onMobile {
-  @media (max-width: 1024px) {
+  @media (max-width: 1200px) {
     @content;
   }
 }
